fixed overlapping stat boxes

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -139,38 +139,41 @@ $dark-primary: #0a0c10;
   padding: 0 1rem;
   display: grid;
   grid-template-columns: repeat(2, minmax(400px, 900px));
-  grid-template-rows: 350px 350px;
+  grid-template-rows: repeat(2, minmax(350px, 375px));
   gap: 2rem;
 
 
 }
 
 .stat-box-group {
-  padding-left: 2rem;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
-  justify-content: space-between;
-  align-items: center;
+  padding: 2rem;
 }
 
 .stat-box {
-  flex: 0;
-  flex-basis: 200px;
   background-color: rgba(236, 236, 236, 0.404);
+  min-width: 250px;
   border-radius: 8px;
   padding: 1rem;
 
 
+  &__title {
+    height: 2.5rem;
+  }
+
+
   &__data {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
     align-items: center;
-    margin: 2.75rem 3.5rem;
+    flex-direction: column;
+    margin: 0 auto;
+    margin-top: 2rem;
   }
 
   &__figure {
-    font-size: 3rem;
+    font-size: 2.75rem;
     font-weight: 600;
   }
 
